...
        </TouchableOpacity>
      </Header>
      <Container>
        <Text>Clientes selecionados:</Text>
        {renderClients()}
        {clients && (
          <Button size="small" type="secondary" onPress={removeAllStoredClients} text="Limpar clientes selecionados"/>
        )}
      </Container>
      <DrawerModal visible={showDrawer} onClose={() => setShowDrawer(false)} selected="myClients"/>
    </SafeArea>
  );
}
