...
                    <HouseSimple size={20} weight='fill' color={selectedItem === 'clients' ? '#EE7D46' : 'black'} />
                    <Text style={[styles.text, selectedItem === 'clients' && styles.selectedText]}>Home</Text>
                    {selectedItem === 'clients' && <View style={styles.verticalLine} />}
                  </TouchableOpacity>
                  <TouchableOpacity onPress={() => handleSelect('myClients')} style={styles.itemContainer}>
                    <User size={20} weight='fill' color={selectedItem === 'myClients' ? '#EE7D46' : 'black'} />
                    <Text style={[styles.text, selectedItem === 'myClients' && styles.selectedText]}>Clientes</Text>
                    {selectedItem === 'myClients' && <View style={styles.verticalLine} />}
                  </TouchableOpacity>
                  <TouchableOpacity onPress={() => handleSelect('products')} style={styles.itemContainer}>
                    <SquaresFour size={20} weight='fill' color={selectedItem === 'products' ? '#EE7D46' : 'black'} />
                    <Text style={[styles.text, selectedItem === 'products' && styles.selectedText]}>Produtos</Text>
                    {selectedItem === 'products' && <View style={styles.verticalLine} />}
...
