appId: com.anonymous.teddyopenfinance # This is an example app id. Replace it with your app id.
---
- launchApp
- tapOn: 'Digite o seu nome:'
- inputText: 'Teddy'
- tapOn: 'Entrar'
- tapOn:
    id: "phosphor-react-native-pencil-simple-bold"
    index: 0
- tapOn: 'Digite o nome:'
- eraseText
- inputText: 'John Maestro Edition'
- tapOn:
    id: "create"